<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.initial.InitialFragment">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStartText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPagesLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/et_pages_limit_label"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="@+id/btnStart" />

    <EditText
        android:id="@+id/etThreadsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/et_treads_count_label"
        app:layout_constraintBottom_toTopOf="@+id/etPagesLimit"
        app:layout_constraintEnd_toEndOf="@+id/etPagesLimit"
        app:layout_constraintStart_toStartOf="@+id/etPagesLimit" />

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/et_initial_url_label"
        app:layout_constraintBottom_toTopOf="@+id/etThreadsCount"
        app:layout_constraintEnd_toEndOf="@+id/etThreadsCount"
        app:layout_constraintStart_toStartOf="@+id/etThreadsCount"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etSearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/et_search_string_label"
        app:layout_constraintBottom_toTopOf="@+id/etWebsite"
        app:layout_constraintEnd_toEndOf="@+id/etWebsite"
        app:layout_constraintStart_toStartOf="@+id/etWebsite" />

</androidx.constraintlayout.widget.ConstraintLayout>